--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,24 @@
 {
     "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "Equation Copier",
+    "description": "Chrome extension for translating images to equations or LaTeX",
     "version": "1.0",
+    "background": {
+        "service_worker": "scripts/background.js"
+    },
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
-    }
+        "default_icon": "images/hello_extensions.png",
+        "default_title": "Take a screen shot!" 
+    },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["scripts/content_script.js"]
+        }
+    ],
+    "permissions": [
+        "desktopCapture",
+        "tabs",
+        "downloads"
+    ]
   }
