--- a/manifest.json
+++ b/manifest.json
@@ -3,22 +3,25 @@
     "name": "Equation Copier",
     "description": "Chrome extension for translating images to equations or LaTeX",
     "version": "1.0",
-    "background": {
-        "service_worker": "scripts/background.js"
-    },
     "action": {
+        
         "default_icon": "images/hello_extensions.png",
-        "default_title": "Take a screen shot!" 
+        "default_title": "Hi",
+        "default_popup": "popup.html"
+    },
+    "background": {
+        "service_worker": "background.js"
     },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["scripts/content_script.js"]
+            "js": ["scripts/jquery.min.js"]
         }
     ],
     "permissions": [
-        "desktopCapture",
+        "activeTab",
         "tabs",
-        "downloads"
-    ]
+        "scripting"
+    ],
+    "host_permissions": ["<all_urls>"]
   }
