--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,9 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["scripts/jquery.min.js"]
+            "js": ["scripts/jquery.min.js",
+                   "scripts/select.js"],
+            "css": ["select.css"]
         }
     ],
     "permissions": [
