--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
     "version": "1.0",
     "action": {
         
-        "default_icon": "images/hello_extensions.png",
-        "default_title": "Hi",
+        "default_icon": "images/logo.png",
+        "default_title": "Equation Copier",
         "default_popup": "popup.html"
     },
     "background": {
